# Test-System

./: .gitignore  CHANGELOG.md  README.md  UPDATE_NOTES_0.3.3.md  bank-index.json  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
Question_bank/测试题库/: test.json
public/: models.json
public/banks/: 01第一周考题（答案）.json
public/banks/第一周考题/: 第一周考题.json
public/banks/第三周考题/: 第三周考题.json
public/banks/第二周考题/: 第二周考题.json
public/banks/第五周考题/: 第五周考题.json
public/banks/第六周考题/: 第六周考题.json
public/banks/第四周考题/: 第四周考题.json
scripts/: create-rounded-icons.js  update-bank-index.cjs
src/: App.tsx  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: ConfirmModal.tsx  ImageViewer.tsx  ModelDownloadModal.tsx  Toast.tsx
src/hooks/: useKeyboard.ts  useSafeArea.ts  useSwipe.ts  useToast.ts
src/pages/: DownloadBanks.tsx  Exam.tsx  Home.tsx  Import.tsx  ManageBanks.tsx  Practice.tsx  Profile.tsx  QuestionBankDetail.tsx  Records.tsx  Result.tsx  Settings.tsx
src/store/: examStore.ts  questionBankStore.ts  recordStore.ts  settingsStore.ts  themeStore.ts
src/utils/: aiGrading.ts  apiGradingService.ts  bankIndex.ts  builtInBanks.ts  deviceDetection.ts  jsonImporter.ts  modelConfigLoader.ts  modelLoader.ts  tauriStore.ts  updater.ts  vconsoleManager.ts  webllmDownloadManager.ts
