[package]
name = "Answer_Test"
version = "0.3.6"
description = "答题测试库"
authors = ["you"]
edition = "2021"

[lib]
name = "answer_test_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-store = "2"
tauri-plugin-os = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
tauri-plugin-log = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
log = "0.4"
tokio = { version = "1", features = ["full"] }

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.14"
jni = "0.21"

[features]
default = []

[profile.release]
panic = "abort"
codegen-units = 16
lto = "thin"
opt-level = "s"
strip = true

# 开发模式优化 - 编译更快
[profile.dev]
codegen-units = 16
opt-level = 0
